<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IntoxicatedApp</string>
    <string name="hello_world">Hello world!</string>

    <!-- Titulos -->
    <string name="title1">Intoxicated</string>
    <string name="title2">app</string>
    <string name="PlayTitle">Play</string>
    <string name="Play1Title">Test your balance</string>
    <string name="Play2Title">Test your focus</string>
    <string name="ScoreTitle">Score</string>
    <string name="AdvicesTitle">Advices</string>
    <string name="AboutTitle">About</string>
    <string name="SettingsTitle">Settings</string>
    <string name="TestsTitle">Tests</string>

    <!-- Botões -->
    <string name="button_games">Play</string>
    <string name="button_advices">Advices</string>
    <string name="button_gyro">Gyroscope</string>
    <string name="button_accel">Accelerometer</string>
    <string name="button_game1sms">Ask a friend for help</string>
    <string name="button_game1call">Call 112</string>
    <string name="button_game1score">Back to main menu</string>
    
    <!-- Score do jogo 1 -->
    <string name="g1score_msg1">You re doing\n      great!</string>
    <string name="g1score_msg2">No more happy\n   hour for you!\n     Be careful!</string>
    <string name="g1score_msg3">   No way you are\ndoing anything in\n      that state!\n   Get some help!</string>

    <!-- Descrições -->
    <string name="imgDescription">Logo</string>
    <string name="g1Description">Test your balance</string>
    <string name="g2Description">Test your focus</string>
    <string name="ad1Description">How to control drinking</string>
    <string name="ad2Description">How to deal with hangover</string>
    <string name="ad3Description">% of Alcohol</string>
    <string name="testsDescription">Tests</string>

    <!-- Opções Menus -->
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="tests">Tests</string>
    
    <!-- Activity Mostrar Conselhos -->
    <string name="advice_number">Advice nº</string>
    <string name="advice_prev">Previous</string>
    <string name="advice_next">Next</string>

    <!-- Activity Definições -->
    <string name="Contacts_Text">Contacts</string>
    <string name="Contacts_Add">Add</string>
    <string name="Contacts_Edit">Edit</string>
    <string name="Contacts_Remove">Remove</string>
    <string name="Contacts_Info">Informations</string>
    <string name="Contact_1">Add contact 1</string>
    <string name="Contact_2">Add contact 2</string>
    <string name="Contact_3">Add contact 3</string>
    <string name="manual_add">Add new contact</string>
    <string name="select_add">Select contact from contacts list</string>
    <string name="updateDB">Update Advices</string>
    <string name="update_DB">Connects to external database and updates information</string>

    <!-- Activity Tests -->
    <string name="tests_sensors">Test Sensors</string>
    <string name="tests_sms">Test SMS</string>
    <string name="tests_sms_button">Send SMS</string>
    <string name="tests_gps">Test GPS</string>
    <string name="tests_gps_button">Get Location</string>
    <string name="tests_result">Result:</string>

    <!-- Activity Adicionar novo contacto -->
    <string name="Contact_Title">New Contact</string>
    <string name="Contact_Name">Name</string>
    <string name="Contact_Number">Number</string>

    <!-- Outros -->
    <string name="cancel">Cancel</string>
    <string name="error_message1">Error: No contacts found</string>
    <string name="error_message2">Error: Message not sent</string>
    <string name="error_message3">Error: Failed to obtain GPS coordinates</string>
	<string name="error_message4">Error: No advices to show of the category</string>
	
    <!-- Mensagem de texto -->
    <string name="sms_info1">Info: Message</string>
    <string name="sms_info2">of</string>
    <string name="sms_info3">sent</string>
    <string name="sms_txt1">Hello</string>
    <string name="sms_txt2">Your friend is drunk and asks for your help. He is in the following coordinates:</string>

    <!-- Autores -->
    <string name="autores">Authors:</string>
    <string name="autor1">(1090626) Mário Teixeira</string>
    <string name="autor2">(1100640) Marta Graça</string>
    <string name="autor3">(1110637) Sara Rego</string>

    <!-- Versão -->
    <string name="version">Version:</string>
    <string name="version_num">0.5</string>

</resources>