<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_marginTop="35dp"
        android:layout_marginLeft="100dp"
        android:text="@string/title1"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="220dp"
        android:text="@string/title2"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/textview3"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/autores"
        android:textSize="25sp"/>
    
    <TextView 
        android:id="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/autor1"
         android:textSize="20sp"/>
    
    <TextView 
        android:id="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:text="@string/autor2"
         android:textSize="20sp"/>
    
    <TextView 
        android:id="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:text="@string/autor3"
         android:textSize="20sp"/>
    
    <TextView 
        android:id="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="275dp"
        android:text="@string/version"
        android:textSize="25sp"/>
    
    <TextView 
        android:id="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:text="@string/version_num"
         android:textSize="20sp"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginLeft="39dp"
        android:contentDescription="@string/imgDescription"
        android:src="@drawable/ic_launcher" />

</RelativeLayout>
