<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contact_Name"/>
    <EditText
        android:id="@+id/contactName"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:inputType="text"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contact_Number"/>
    <EditText 
        android:id="@+id/contactNumber"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>
    <Button
        android:id="@+id/editButton"
     	android:layout_height="wrap_content"
     	android:layout_width="wrap_content"
     	android:text="@string/Contacts_Edit"/>
    <Button
        android:id="@+id/removeButton"
     	android:layout_height="wrap_content"
     	android:layout_width="wrap_content"
     	android:text="@string/Contacts_Remove"/>
    <Button 
        android:id="@+id/cancelButton"
     	android:layout_height="wrap_content"
     	android:layout_width="wrap_content"
     	android:text="@string/cancel"/>

</LinearLayout>
