<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"  
        android:textSize="25sp"      
        android:text="@string/testsDescription"/>
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"         
        android:layout_marginTop="45dp"
        android:textSize="20sp"      
        android:text="@string/tests_sensors"/>
    
    <ToggleButton
        android:id="@+id/button_testGyro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_marginTop="80dp"        
        android:textOn="Gyroscope on"
    	android:textOff="Gyroscope off"
    	android:onClick="onToggleClicked_gyro"/>
    
    <ToggleButton 
        android:id="@+id/button_testAccel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"                
        android:textOn="Accelerometer on"
    	android:textOff="Accelerometer off"
    	android:layout_alignBaseline="@+id/button_testGyro"
        android:layout_alignBottom="@+id/button_testGyro"
        android:layout_toRightOf="@+id/button_testGyro"
    	android:onClick="onToggleClicked_accel"/>
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_marginTop="145dp"
        android:textSize="20sp"      
        android:text="@string/tests_sms"/>
    
    <Button 
        android:id="@+id/button_testSMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/tests_sms_button"/>
    
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_marginTop="245dp"
        android:textSize="20sp"      
        android:text="@string/tests_gps"/>
    
    <Button 
        android:id="@+id/button_testGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:text="@string/tests_gps_button"/>
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_marginTop="345dp"
        android:textSize="20sp"      
        android:text="@string/tests_result"/>
    
    <TextView 
        android:id="@+id/textView_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"   
        android:layout_marginTop="380dp"/>
    
    
	</RelativeLayout>
</ScrollView>
