<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <ImageButton
        android:id="@+id/button_drinking"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/drinking"
        android:contentDescription="@string/ad1Description" />        
    
    <ImageButton
        android:id="@+id/button_hangover"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_marginTop="170dp"
        android:background="@drawable/hangover"
        android:contentDescription="@string/ad2Description"	/>
    
    <ImageButton 
        android:id="@+id/button_alchool"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:background="@drawable/alchool"
        android:layout_marginTop="300dp"
        android:contentDescription="@string/ad3Description"/>

</RelativeLayout>
