<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
     <TextView 
        android:id="@+id/tv_game1_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="40sp" />
        
     <Button
        android:id="@+id/button_game1_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:layout_centerHorizontal="true"
        android:text="@string/button_game1call" />
     
     <Button
        android:id="@+id/button_game1_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:layout_centerHorizontal="true"
        android:text="@string/button_game1sms" />
     
     <Button
        android:id="@+id/button_game1_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:layout_centerHorizontal="true"
        android:text="@string/button_game1score" />
     

</RelativeLayout>