<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
        
        <TextView
            android:id="@+id/tvAdviceNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="25sp"
            android:text="@string/advice_number"/>
        
        <TextView
            android:id="@+id/tvAdviceOutput"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content" 
        	android:layout_centerHorizontal="true"
        	android:layout_marginTop="45dp"
        	android:textSize="15sp"/>
        
        <ImageButton
            android:id="@+id/btnAdvicePrev"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="15dp"
        	android:layout_marginBottom="15dp"
        	android:layout_alignParentBottom="true"
        	android:contentDescription="@string/advice_prev"
        	android:background="@drawable/previous"/>
        
        <TextView 
            android:id="@+id/tvAdviceCounter"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentBottom="true"
        	android:layout_centerHorizontal="true"
        	android:layout_marginBottom="25dp"
        	android:textSize="15sp"/>
            
        
        <ImageButton
            android:id="@+id/btnAdviceNext"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="15dp"
        	android:layout_marginBottom="15dp"
        	android:layout_alignParentRight="true"
        	android:layout_alignParentBottom="true"
        	android:contentDescription="@string/advice_next"
        	android:background="@drawable/next"/>

</RelativeLayout>
    
